--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,20 +1,16 @@
-:root {
-  
-  --clr-action: hsl(238, 40%, 52%);
-  --clr-action-light: hsl(239, 57%, 85%);
+:root {  
+  --clr-theme: hsl(238, 40%, 52%);
+  --clr-theme-light: hsl(239, 57%, 85%);
   --clr-action-danger: hsl(358, 79%, 66%);
   --clr-action-danger-light: hsl(357, 100%, 86%);
-  --clr-action-neutral: hsl(211, 10%, 45%);
   
   --background: hsl(223, 19%, 93%);
   --background-light: hsl(228, 33%, 97%);
-  --neutral-main: hsl(212, 24%, 26%);
-  --white: hsl(0, 0%, 100%);
+  --clr-neutral-main: hsl(212, 24%, 26%);
+  --clr-neutral-light: hsl(211, 10%, 45%);
+  --clr-white: hsl(0, 0%, 100%);
 
 }
-
-
-
 
 *,
 *::before,
@@ -25,6 +21,10 @@
 body {
   font-family: "Rubik", sans-serif;
   margin: 0;
+}
+
+button {
+  font-family: inherit;
 }
 
 .main {
