--- a/src/components/Comment/comment.scss
+++ b/src/components/Comment/comment.scss
@@ -1,29 +1,101 @@
 .comment {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1.2rem;
   background: white;
   padding: 1rem;
-  &__score {
+  border-radius: .8rem;
+  margin-top: 2rem;
+
+  &__user-info {
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    gap: .8rem;
+    grid-column: 1 / -1;
+  }
+  
+  &__picture {
+    --picture-size: 45px;
+    width: var(--picture-size);
+    height: var(--picture-size);
+    border-radius: 50%;
+  }
+  
+  &__username {
+    color: var(--clr-theme);
+    font-weight: bold;
+  }
+
+  &__timestamp {
+    color: var(--clr-neutral-light);
+    font-weight: 500;
+  }
+  
+  &__body {
+    grid-column: 1 / 3;
+    color: var(--clr-neutral-light);
+    margin: 0;
+  }
+
+  &__score {
+    width: min-content;
+    display: flex;
     align-items: center;
     gap: 1rem;
     background: var(--background);
     padding: 1rem;
-    border-radius: .3rem;
+    border-radius: .8rem;
 
     &-count {
-      color: var(--clr-action);
+      color: var(--clr-theme);
       font-weight: 700;
     }
   }
-
+  
   &__icon {
-    width: max-content;
-    fill: var(--clr-action-light);
-    padding: 1rem;
+      --size: 20px;
+      width: var(--size);
+      max-height: var(--size);
+      padding: .2rem;
+
+
+    fill: var(--clr-theme-light);
+    transition: fill 250ms ease;
+    flex-shrink: 2;    
     &:hover {
       cursor: pointer;
+      fill: var(--clr-theme);
     }
+  }
+
+  &__reply {
+    display: flex;
+    gap: .5rem;
+    align-items: center;
+    width: min-content;
+    justify-self: flex-end;
+
+    border: none;
+    background: transparent;
+    font-size: 1rem;
     
+    font-weight: 500;
+    color: var(--clr-theme);
+    transition: color 250ms ease;
+
+    &-icon {
+      --size: 18px;
+      fill: var(--clr-theme);
+      width: var(--size);
+      max-height: var(--size);
+      transition: fill 250ms ease;
+    }
+
+    &:hover,
+    &:hover .comment__reply-icon {
+      cursor: pointer;
+      color: var(--clr-theme-light);
+      fill: var(--clr-theme-light);  
+    }
   }
 }
