--- a/src/components/Comments/comments.scss
+++ b/src/components/Comments/comments.scss
@@ -1,6 +1,7 @@
 .comments {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
   width: min(95%, 45rem);
   margin-inline: auto;
   background: rosybrown;
