--- a/src/components/Comment/comment.scss
+++ b/src/components/Comment/comment.scss
@@ -5,7 +5,12 @@
   background: white;
   padding: 1rem;
   border-radius: .8rem;
-  margin-top: 2rem;
+
+  &-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 
   &__user-info {
     display: flex;
@@ -43,8 +48,8 @@
     align-items: center;
     gap: 1rem;
     background: var(--background);
-    padding: 1rem;
-    border-radius: .8rem;
+    padding: .6rem;
+    border-radius: .6rem;
 
     &-count {
       color: var(--clr-theme);
@@ -68,7 +73,18 @@
     }
   }
 
-  &__reply {
+  &__reply-quote {
+    color: var(--clr-theme);
+    font-weight: 500;
+    transition: color 250ms ease;
+
+    &:hover {
+      cursor: pointer;
+      color: var(--clr-theme-light);
+    }
+  }
+
+  &__reply-button {
     display: flex;
     gap: .5rem;
     align-items: center;
@@ -92,10 +108,17 @@
     }
 
     &:hover,
-    &:hover .comment__reply-icon {
+    &:hover .comment__reply-button-icon {
       cursor: pointer;
       color: var(--clr-theme-light);
       fill: var(--clr-theme-light);  
     }
   }
+}
+
+.replies {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-left: 1.5rem;
 }
