--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,6 +28,9 @@ button {
 }
 
 .main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   min-height: 100vh;
   background-color: var(--background);
 }
