--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,8 @@
   --clr-neutral-light: hsl(211, 10%, 45%);
   --clr-white: hsl(0, 0%, 100%);
 
+  --picture-size: 45px;
+  --border-radius: .8rem;
 }
 
 *,
@@ -33,6 +35,8 @@ button {
   justify-content: center;
   min-height: 100vh;
   background-color: var(--background);
+  
+  padding-block: 4rem;
 }
 
 .comments {
