updated values and hover states

--- a/src/components/Comment/comment.scss
+++ b/src/components/Comment/comment.scss
@@ -4,7 +4,7 @@
   gap: 1.2rem;
   background: white;
   padding: 1rem;
-  border-radius: .8rem;
+  border-radius: var(--border-radius);
 
   &-container {
     display: flex;
@@ -15,12 +15,11 @@
   &__user-info {
     display: flex;
     align-items: center;
-    gap: .8rem;
+    gap: .6rem;
     grid-column: 1 / -1;
   }
   
   &__picture {
-    --picture-size: 45px;
     width: var(--picture-size);
     height: var(--picture-size);
     border-radius: 50%;
@@ -29,6 +28,12 @@
   &__username {
     color: var(--clr-theme);
     font-weight: bold;
+    transition: color 200ms ease;
+    padding: .2rem;
+    &:hover {
+      cursor: pointer;
+      color: var(--clr-theme-light);
+    }
   }
 
   &__timestamp {
