--- a/src/components/Comment/comment.scss
+++ b/src/components/Comment/comment.scss
@@ -1,9 +1,11 @@
+@use "/src/styles/media";
+
 .comment {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1.2rem;
   background: white;
-  padding: 1rem;
+  padding: 1.3rem;
   border-radius: var(--border-radius);
 
   &-container {
@@ -119,6 +121,38 @@
       fill: var(--clr-theme-light);  
     }
   }
+
+  @include media.desktop {
+    grid-template-columns: auto 1fr auto;
+    padding-bottom: 1.7rem;
+
+    &__user-info {
+      grid-column: 2 / 3;
+    }
+    
+    &__body {
+      grid-column: 2 / 4;
+      margin-right: .5rem;
+    }
+
+    &__score {
+      justify-content: center;
+      max-height: 6.5rem;
+      flex-direction: column;
+      padding-inline: .7rem;
+      grid-column: 1 / 2;
+      grid-row: 1 / 3;
+
+      &-count {
+        margin-top: -2px;
+      }
+    }
+
+    &__reply-button {
+      grid-column: 3 / 4;
+      grid-row: 1 / 2;
+    }
+  }
 }
 
 .replies {
@@ -126,4 +160,36 @@
   flex-direction: column;
   gap: 1rem;
   margin-left: 1.5rem;
+
+  .comment {
+    position: relative;
+
+    &::before {
+      position: absolute;
+      content: "";
+      border-left: 3px solid hsl(238 15% 80% / .2);
+      left: -20px;
+      height: 100%;
+      border-radius: 2px;
+
+    }
+
+    &:last-child::before {
+      top: -20px;
+      height: calc(100% + 20px);
+    }
+    
+  }
+
+  @include media.desktop {
+    margin-left: 4rem;
+
+    .comment {
+      &::before {
+        left: -35px;
+      }
+
+    }
+  }
+  
 }
